web/apps/water/waterworks/css/main.css
@charset "UTF-8";
@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300);

html,
body {
  font-size: 100%;
  line-height: 1.5;
  font-family: "Roboto", sans-serif;
  color: #565a5c;
}

@media print {

  html,
  body {
    font-size: 12pt;
  }
}

h1,
h2,
h3,
h4 {
  font-family: "Montserrat", sans-serif;
  letter-spacing: -0.03125em;
  margin: 0;
  font-weight: 400;
}

p {
  font-family: "Roboto", sans-serif;
  margin: 0;
  font-size: 14px;
  font-size: 0.875rem;
}

a,
a:active,
a:hover,
a:visited {
  color: #1F70C5;
  text-decoration: none;
}

a:active,
a:hover,
a:focus {
  transition: color 0.3s ease;
  color: #1c63af;
  text-decoration: none;
}

h1,
h2,
h3,
h4 {
  color: #565a5c;
}

h1 {
  font-size: 36px;
  font-size: 2.25rem;
  line-height: 1.25;
  margin-bottom: 24px;
  margin-bottom: 1.5rem;
}

h2 {
  font-size: 22px;
  font-size: 1.375rem;
  line-height: 1.25;
  margin: 48px 0px 24px;
  margin: 3rem 0 1.5rem;
}

h3 {
  font-size: 16px;
  font-size: 1rem;
  margin: 48px 0px 24px;
  margin: 3rem 0 1.5rem;
}

h4 {
  font-size: 14px;
  font-size: 0.875rem;
  margin: 48px 0px 24px;
  margin: 3rem 0 1.5rem;
}

p {
  margin-bottom: 24px;
  margin-bottom: 1.5rem;
}

html,
body {
  height: 100%;
}

body {
  background-color: #fff;
  padding-right: 0px !important;
  overflow: hidden;
}

ul {
  list-style-type: none;
}

button:focus {
  outline: 3px solid #1F70C5 !important;
  outline-offset: 2px;
}

.wrapper a:focus,
.wrapper button:focus,
.wrapper input:focus,
.wrapper select:focus,
.wrapper textarea:focus {
  outline: 3px solid #1F70C5 !important;
  outline-offset: 2px;
}

.btn {
  border: 1px solid #dce0e0;
  color: #393c3d;
  transition: all 0.3s ease;
}

.btn-primary {
  background: #1F70C5;
  border: none;
  color: #fff;
  border: none;
  border: 1px solid #1F70C5;
  transition: all 0.3s ease;
}

.btn-primary:hover,
.btn-primary:active,
.btn-primary:focus {
  background: #1F70C5;
  border: none;
  color: #fff;
  border: none;
  border: 1px solid #1F70C5;
}

.leaflet-control-attribution.leaflet-control {
  display: none;
}

.modal-cancel {
  float: right;
  background-position: -88px 0;
  display: block;
}

.type:before {
  content: "";
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-family: "FontAwesome";
  left: 0;
}

.location:before {
  content: "";
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-family: "FontAwesome";
  left: 0.2em;
}

.dates:before {
  content: "";
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-family: "FontAwesome";
  left: 0;
}

.type,
.location,
.dates {
  display: block;
  color: #82888a;
  font-weight: 400;
  line-height: 22px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 1.3em;
  font-size: 14px;
  font-size: 0.875rem;
}

.type:before,
.location:before,
.dates:before {
  position: absolute;
  color: #1F70C5;
  font-size: 12px;
  font-size: 0.75rem;
}

.projectTeaser:hover {
  cursor: pointer;
}

.projectTeaser .modal-content {
  margin: 0 auto;
  padding: 0.8em;
  position: absolute;
  display: flex;
  width: 96%;
  left: 2%;
  bottom: 2%;
  background-color: #fff;
  border-color: #b7babb;
  z-index: 4000;
  visibility: visible;
  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.2s ease;
}

.projectTeaser .modal-content:hover {
  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2);
}

@media screen and (min-width: 35em) {
  .projectTeaser .modal-content {
    width: 80%;
    left: 10%;
  }
}

@media screen and (min-width: 55em) {
  .projectTeaser .modal-content {
    width: 60%;
    left: 20%;
  }
}

@media screen and (min-width: 62em) {
  .projectTeaser .modal-content {
    width: 50%;
    left: 25%;
  }
}

@media screen and (min-width: 80em) {
  .projectTeaser .modal-content {
    width: 35%;
    left: 32.5%;
  }
}

.projectTeaser .modal-content .modal-close {
  position: absolute;
  top: 0.3em;
  right: 0.3em;
  line-height: 1;
  z-index: 30;
}

.projectTeaser .modal-content .modal-close:before {
  content: "";
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-family: "FontAwesome";
  font-size: 21px;
  opacity: 0.2;
}

.projectTeaser .modal-content .modal-close:hover:before {
  color: black;
  transition: color 0.3s ease-in;
}

.projectTeaser .modal-content .modal-close:before {
  color: #565a5c;
}

.projectTeaser .modal-content .modal-body {
  padding: 0;
  display: flex;
  flex: 1;
  overflow: hidden;
}

.projectTeaser .modal-content .modal-body h3 {
  margin-top: 0px;
  margin-bottom: 0.5em;
  text-transform: capitalize;
}

.projectTeaser .modal-content .modal-body>div {
  flex-basis: 150px;
  flex-grow: 1;
}

.projectTeaser .modal-content .modal-body>div:last-child {
  flex-grow: 3;
}

.projectTeaser .modal-content .modal-body .teaserThumb {
  background-position: center center;
  background-size: cover;
  flex-basis: 0;
  flex-grow: 0;
  height: auto;
  max-width: 150px;
  opacity: 0;
  visibility: hidden;
  border-radius: 2px;
  transition: all 0.3s ease-in-out;
}

@media screen and (min-width: 35em) {
  .projectTeaser .modal-content .modal-body .teaserThumb {
    margin-right: 1em;
  }
}

@media screen and (min-width: 35em) {
  .projectTeaser .modal-content .modal-body .teaserThumb {
    flex-grow: 1;
    flex-basis: 150px;
    opacity: 1;
    visibility: visible;
  }
}

.projectTeaser .modal-content .modal-body .teaserContent {
  overflow: hidden;
  position: relative;
}

/* ------ modal overrides -------- */
.modal {
  visibility: hidden;
}

.top-bar {
  background-color: #1F70C5;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 6000;
  width: 100%;
  height: 50px;
}

.top-bar .navActions {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  padding: 0.5em;
}
/* ... */

